welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:4: error: only classes can have declared but undefined members
	val n: Int
            ^golomb:5: error: type mismatch;
 found   : Unit
 required: Int
	for (i <- 1 to n)
               ^