welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = 
{
	var a: Int=1
	val n: Int
	for (i <- 1 to n)
	{
		a=golomb(3)
		for (j <- 1 to a)
		{
			
		}
	}
}
